// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GnomesContainer filters the population 1`] = `
<div>
  <div
    class="sc-bZQynM koJOpM"
  >
    <label
      class="sc-gzVnrw ijciRG"
      for="GnomeFilter"
    >
      Filter
    </label>
    <input
      class="sc-htoDjs icjMxa"
      data-testid="GnomeFilter"
      name="GnomeFilter"
      value=""
    />
  </div>
  <div
    class="sc-EHOje cFMLaD"
    data-testid="GnomeList"
  >
    <article
      class="sc-bdVaJa ibopQg"
      data-testid="Gnome-1"
    >
      <h1
        class="sc-bwzfXH ktvMFN"
        data-testid="name"
      >
        Lola
      </h1>
      <img
        alt="Lola"
        class="sc-htpNat bxYIbZ"
        data-testid="thumbnail"
        src="http://www.publicdomainpictures.net/pictures/120000/nahled/white-hen.jpg"
        width="200px"
      />
      <div
        class="sc-bxivhb AhLTN"
      >
        <dl
          class="sc-jAaTju bxHhgJ"
        >
          <dt
            class="sc-jDwBTQ kArRjQ"
          >
            Friends #
          </dt>
          <dd
            class="sc-gPEVay gKcLgt"
          >
            0
          </dd>
        </dl>
        <dl
          class="sc-iRbamj cFXwIH"
        >
          <dt
            class="sc-jlyJG krEniG"
          >
            Professions #
          </dt>
          <dd
            class="sc-gipzik ejDRhz"
          >
            6
          </dd>
        </dl>
        <button
          class="sc-ifAKCX dFiLvw"
        >
          OPEN
        </button>
      </div>
    </article>
    <article
      class="sc-bdVaJa ibopQg"
      data-testid="Gnome-2"
    >
      <h1
        class="sc-bwzfXH ktvMFN"
        data-testid="name"
      >
        Lucia
      </h1>
      <img
        alt="Lucia"
        class="sc-htpNat bxYIbZ"
        data-testid="thumbnail"
        src="http://www.publicdomainpictures.net/pictures/30000/nahled/maple-leaves-background.jpg"
        width="200px"
      />
      <div
        class="sc-bxivhb AhLTN"
      >
        <dl
          class="sc-csuQGl BpIXC"
        >
          <dt
            class="sc-Rmtcm kkGsuG"
          >
            Friends #
          </dt>
          <dd
            class="sc-bRBYWo fhVRTz"
          >
            1
          </dd>
        </dl>
        <dl
          class="sc-hzDkRC cDZwHr"
        >
          <dt
            class="sc-jhAzac gOSUvy"
          >
            Professions #
          </dt>
          <dd
            class="sc-fBuWsC jASHLB"
          >
            3
          </dd>
        </dl>
        <button
          class="sc-ifAKCX dFiLvw"
        >
          OPEN
        </button>
      </div>
    </article>
    <article
      class="sc-bdVaJa ibopQg"
      data-testid="Gnome-3"
    >
      <h1
        class="sc-bwzfXH ktvMFN"
        data-testid="name"
      >
        Paco
      </h1>
      <img
        alt="Paco"
        class="sc-htpNat bxYIbZ"
        data-testid="thumbnail"
        src="http://www.publicdomainpictures.net/pictures/10000/nahled/1-1275919724d1Oh.jpg"
        width="200px"
      />
      <div
        class="sc-bxivhb AhLTN"
      >
        <dl
          class="sc-fMiknA ckWEGr"
        >
          <dt
            class="sc-dVhcbM iMamPZ"
          >
            Friends #
          </dt>
          <dd
            class="sc-eqIVtm kGgpwJ"
          >
            2
          </dd>
        </dl>
        <dl
          class="sc-fAjcbJ iZBjiY"
        >
          <dt
            class="sc-caSCKo cGsxRv"
          >
            Professions #
          </dt>
          <dd
            class="sc-gisBJw gbEtFL"
          >
            6
          </dd>
        </dl>
        <button
          class="sc-ifAKCX dFiLvw"
        >
          OPEN
        </button>
      </div>
    </article>
    <article
      class="sc-bdVaJa ibopQg"
      data-testid="Gnome-4"
    >
      <h1
        class="sc-bwzfXH ktvMFN"
        data-testid="name"
      >
        Nestor
      </h1>
      <img
        alt="Nestor"
        class="sc-htpNat bxYIbZ"
        data-testid="thumbnail"
        src="http://www.publicdomainpictures.net/pictures/10000/nahled/zebra-head-11281366876AZ3M.jpg"
        width="200px"
      />
      <div
        class="sc-bxivhb AhLTN"
      >
        <dl
          class="sc-kjoXOD jCpIaq"
        >
          <dt
            class="sc-cHGsZl fKXNtP"
          >
            Friends #
          </dt>
          <dd
            class="sc-TOsTZ gfbLfb"
          >
            2
          </dd>
        </dl>
        <dl
          class="sc-kgAjT hZngUN"
        >
          <dt
            class="sc-cJSrbW dxzMvW"
          >
            Professions #
          </dt>
          <dd
            class="sc-ksYbfQ ihUTtD"
          >
            2
          </dd>
        </dl>
        <button
          class="sc-ifAKCX dFiLvw"
        >
          OPEN
        </button>
      </div>
    </article>
  </div>
</div>
`;

exports[`GnomesContainer filters the population 2`] = `
<div>
  <div
    class="sc-bZQynM koJOpM"
  >
    <label
      class="sc-gzVnrw ijciRG"
      for="GnomeFilter"
    >
      Filter
    </label>
    <input
      class="sc-htoDjs icjMxa"
      data-testid="GnomeFilter"
      name="GnomeFilter"
      value="P"
    />
  </div>
  <div
    class="sc-EHOje cFMLaD"
    data-testid="GnomeList"
  >
    <article
      class="sc-bdVaJa ibopQg"
      data-testid="Gnome-3"
    >
      <h1
        class="sc-bwzfXH ktvMFN"
        data-testid="name"
      >
        Paco
      </h1>
      <img
        alt="Paco"
        class="sc-htpNat bxYIbZ"
        data-testid="thumbnail"
        src="http://www.publicdomainpictures.net/pictures/10000/nahled/1-1275919724d1Oh.jpg"
        width="200px"
      />
      <div
        class="sc-bxivhb AhLTN"
      >
        <dl
          class="sc-hmzhuo elDmKd"
        >
          <dt
            class="sc-frDJqD jDBvfg"
          >
            Friends #
          </dt>
          <dd
            class="sc-kvZOFW eAtbSv"
          >
            2
          </dd>
        </dl>
        <dl
          class="sc-hqyNC hSqeuf"
        >
          <dt
            class="sc-jbKcbu lfLVEJ"
          >
            Professions #
          </dt>
          <dd
            class="sc-dNLxif dmaNwT"
          >
            6
          </dd>
        </dl>
        <button
          class="sc-ifAKCX dFiLvw"
        >
          OPEN
        </button>
      </div>
    </article>
  </div>
</div>
`;
